--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,7 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
+      "@/assets/*": ["src/assets/*"],
       "@/constants/*": ["src/constants/*"],
       "@/components/*": ["src/components/*"],
       "@/pages/*": ["src/pages/*"],
