--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.3",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.3",
+    "redux-persist": "^6.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
